--- a/src/app/components/pages/search-page/search-page.component.scss
+++ b/src/app/components/pages/search-page/search-page.component.scss
@@ -5,7 +5,7 @@
 .books-lists {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 
   .book-list {
     padding: 5px;
