--- a/src/app/components/pages/book-page/book-page.component.html
+++ b/src/app/components/pages/book-page/book-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="book">
+  <div *ngIf="book" class="book">
     <h1>{{ book.title }}</h1>
     <div class="list">
       <h2>Auteurs</h2>
